Mise en place du détail des comptes d'un client et mise en place de l'interface Etienne

--- a/src/java/ch/hegarc/ig/odi/Bank/Internationalitation/resources_en.properties
+++ b/src/java/ch/hegarc/ig/odi/Bank/Internationalitation/resources_en.properties
@@ -1,6 +1,6 @@
 IndexWelcome=Welcome on BankApp !
 IndexLanguage=Language
-IndexBack=Back to home
+IndexBack=Back to home page
 create=Create
 reset=Reset
 cancel=Cancel
@@ -21,6 +21,7 @@ AccountNumberError=Error the number is empty, insert one please
 AccountNameError=Error the Name is empty, insert one please
 AccountBalanceError=Error the Balance is empty, insert one please
 AccountRateError=Error the Rate is empty, insert one please
+AccountTitle=Detail of Account
 CustomersListTitle=List of customers
 CustomersListCreateCustomer=Add customer
 CustomersListCustomerDetails=Detail
@@ -32,4 +33,4 @@ CustomerDetailsEmpty=There are no account for this costumer
 CustomerDetailsEdit=Edit the customer
 CustomerDetailsCreateAccount=Create a Account
 CustomerDetailsAccountDetails=Detail
-CustomerDetailsBack=Back to the customer detail
+CustomerDetailsBack=Back to customer
