--- a/src/java/ch/hegarc/ig/odi/Bank/Internationalitation/resources_fr.properties
+++ b/src/java/ch/hegarc/ig/odi/Bank/Internationalitation/resources_fr.properties
@@ -1,6 +1,6 @@
 IndexWelcome=Bienvenue sur BankApp !
 IndexLanguage=Langage
-IndexBack=Retour \u00e0 l'accueil
+IndexBack=Retour \u00e0 la page d'accueil
 create=Cr\u00e9er
 reset=R\u00e9initialiser
 cancel=Annuler
@@ -21,6 +21,7 @@ AccountNumberError=Erreur : veuillez saisir un num\u00e9ro
 AccountNameError=Erreur : veuillez saisir un libell\u00e9
 AccountBalanceError=Erreur : veuillez saisir un solde
 AccountRateError=Erreur : veuillez saisir un taux d'int\u00e9r\u00eats
+AccountTitle=D\u00e9tail du compte
 CustomersListTitle=Liste des clients
 CustomersListCreateCustomer=Ajout client
 CustomersListCustomerDetails=D\u00e9tail
@@ -32,5 +33,5 @@ CustomerDetailsEmpty=Il n'y a pas de comptes li\u00e9s \u00e0 ce client
 CustomerDetailsEdit=Modifier le client
 CustomerDetailsCreateAccount=Cr\u00e9er un compte
 CustomerDetailsAccountDetails=D\u00e9tails
-CustomerDetailsBack=Retour au d\u00e9tails du client
+CustomerDetailsBack=Retour au client
 
